--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -168,6 +168,8 @@ We present in this paper the stellar occultation predictions for the 7 major irr
 
 \section{Scientific Rationale} \label{Sec: Rationale}
 
+As explicited in section \ref{Sec: introducao}
+
 %Because they are faint, the majority of these objects was discovered only in the last century\footnote{Website: http://ssd.jpl.nasa.gov/?sat\_discovery} . They were never visited by a spacecraft, with the exception of Himalia, Phoebe and Nereid, in a flyby by the Cassini space probe in 2000 for Himalia \citep{Porco2003} and in 2004 for Phoebe \citep{Desmars2013} and in a flyby by the Voyager 2 space probe in 1989 for Nereid \citep{Smith1989}. Even in situ, they were still opportunity target observations resulting in not optimal measurements, with size errors of $10 km$ for Himalia and $25 km$ for Nereid \citep{Thomas1991}. The exception is Phoebe with a very accurate measurement of size with a mean radius error of $0.7 km$ \citep{Thomas2010}.
 
 %If these objects were captured, there remains the question of where they came from. \citealp{Clark2005} showed from imaging spectroscopy from Cassini that Phoebe has a surface probably covered by material from the outer solar system and \citealp{Grav2003} showed that the satellites of the Jovian Prograde Group Himalia have grey colors implying that their surfaces are similar to that of C-type asteroids. In that same work, the Jovian Retrograde Group Carme was found to have surface colors similar to the D-type asteroids like Hilda or Trojan families while JXIII Kalyke has a redder color like Centaurs or trans-neptunian objects (TNOs).
@@ -184,7 +186,11 @@ We present in this paper the stellar occultation predictions for the 7 major irr
 
 \section{Correction of the ephemeris} \label{Sec: Offset}
 
-\cite{GomesJunior2015} showed from observations made at the Observatório do Pico dos Dias (OPD), Observatoire Haute-Provence (OHP) and European Southern Observatory (ESO) that the orbits of the irregular satellites from the the giant planets have systematic errors. The offsets of the observations relative to the ephemeris could be up to 200 mas for some satellites. These differences could be associated with errors in their orbital elements.
+\cite{GomesJunior2015} showed from observations made at the Observatório do Pico dos Dias (OPD), Observatoire Haute-Provence (OHP) and European Southern Observatory (ESO) that the orbits of the irregular satellites of the giant planets have systematic errors. The offsets of the observations relative to the JPL ephemeris could be up to 200 mas for some satellites. These differences could be associated with errors in their orbital elements.
+
+We utilize the offsets obtained by \cite{GomesJunior2015} to identify a pattern in the error of the ephemeris. This pattern could be used to extrapolate an offset to the satellite by the time of the occultation predicted. Plots of the offsets over time and true anomaly (see Fig. \ref{} for ??) clearly show that these two parameters are the most important in the differences observed.
+
+
 
 \section{Prediction of occultations} \label{Sec: predictions}
 
