--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -50,8 +50,8 @@
 {\def\hyper@linkstart##1##2{}%
 \let\hyper@linkend\@empty\citeyear[#1][#2]{#3}}}
 \makeatother
-\titlerunning{Astrometric Positions of the Irregular Satellites of Giant Planets}
-\authorrunning{Gomes-Júniot et al.}
+\titlerunning{Predictions of stellar occultations by irregular satellites}
+\authorrunning{Gomes-Júnior et al.}
 
 \makeatother
 
@@ -229,6 +229,16 @@ F(t,f) = p[0]\times\sin\left(\frac{2\pi}{p[1]}\times \frac{t - jd_{0}}{365.25} +
 
 \section{Occultation tests} \label{Sec: testes}
 
+\begin{figure*}
+\begin{centering}
+\subfigure[Sem offsets]{\includegraphics[scale=0.19]{figures/Himalia1_2015-03-03T00:39:25.png}  \label{Fig: occ-Himalia-nooff}}
+\subfigure[Offset de Himalia a partir do ajuste]{\includegraphics[scale=0.19]{figures/Himalia2_2015-03-03T00:39:18.png}  \label{Fig: occ-Himalia-ajuste}}
+\subfigure[Obs. dia 22 de Fevereiro (campos separados)]{\includegraphics[scale=0.19]{figures/Himalia3_2015-03-03T00:39:40.png}   \label{Fig: occ-Himalia-off22fev}}
+\subfigure[Obs. dia 03 de Março (mesmo campo)]{\includegraphics[scale=0.19]{figures/Himalia4_2015-03-03T00:39:15.png}   \label{Fig: occ-Himalia-off03mar}}
+\caption{Predictions for Himalia: O ponto grande em vermelho mostra o ponto de máxima aproximação geocêntrica da sombra na Terra, os pontos vermelhos menores são os centros da ocultação separados por um minuto, as linhas retas são os limites das sombras dado o tamanho estimado do objeto e as linhas tracejadas equivalem a uma diferença de 40 mas do centro da sombra representando o erro estimado da predição. (a) é o mapa utilizando apenas as posições nominais da estrela e do satélite. (b) mostra a sombra dado um offset estimado para a posição de Himalia dada sua anomalia verdadeira segundo um ajuste feito em cima dos offsets de efeméride encontrados em \cite{GomesJunior2015-Irregular}. Em (c) são aplicados offsets às posições da estrela e do satélite a partir de observações feitas em 22 de Fevereiro no telescópio Zeiss. Em (d), temos o mesmo que para (c) porém com offsets obtidos de observações feitas em 03 de Março no telescópio Perkin-Elmer quando os objetos estavam próximos no campo.\textcolor{red}{Figuras e texto ainda serão mudados. Colocado para visualização}}
+\label{Fig: occ-Himalia}
+\end{centering}
+\end{figure*}
 
 \section{Conclusion} \label{Sec: conclusions}
 
