continuado artigo de ocultacoes dos irregulares

--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -152,6 +152,19 @@ month={Mar},
 pages={1962–1976}
 }
 
+@article{Assafin2010,
+title={Precise predictions of stellar occultations by Pluto, Charon, Nix, and Hydra for 2008–2015},
+volume={515},
+url={http://dx.doi.org/10.1051/0004-6361/200913690},
+DOI={10.1051/0004-6361/200913690},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={Assafin, M. and Camargo, J. I. B. and Vieira Martins, R. and Andrei, A. H. and Sicardy, B. and Young, L. and da Silva Neto, D. N. and Braga-Ribas, F.},
+year={2010},
+month={Jun},
+pages={A32}
+}
+
 @article{Sicardy2011,
 title={A Pluto-like radius and a high albedo for the dwarf planet Eris from an occultation},
 volume={478},
@@ -180,6 +193,19 @@ month={Nov},
 pages={566–569}
 }
 
+@article{Assafin2012,
+title={Candidate stellar occultations by large trans-Neptunian objects up to 2015},
+volume={541},
+url={http://dx.doi.org/10.1051/0004-6361/201118349},
+DOI={10.1051/0004-6361/201118349},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={Assafin, M. and Camargo, J. I. B. and Vieira Martins, R. and Braga-Ribas, F. and Sicardy, B. and Andrei, A. H. and da Silva Neto, D. N.},
+year={2012},
+month={May},
+pages={A142}
+}
+
 @article{Zacharias2013,
 title={THE FOURTH US NAVAL OBSERVATORY CCD ASTROGRAPH CATALOG (UCAC4)},
 volume={145},
@@ -192,6 +218,19 @@ author={Zacharias, N. and Finch, C. T. and Girard, T. M. and Henden, A. and Bart
 year={2013},
 month={Jan},
 pages={44}
+}
+
+@article{Camargo2013,
+title={Candidate stellar occultations by Centaurs and trans-Neptunian objects up to 2014},
+volume={561},
+url={http://dx.doi.org/10.1051/0004-6361/201322579},
+DOI={10.1051/0004-6361/201322579},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={Camargo, J. I. B. and Vieira-Martins, R. and Assafin, M. and Braga-Ribas, F. and Sicardy, B. and Desmars, J. and Andrei, A. H. and Benedetti-Rossi, G. and Dias-Oliveira, A.},
+year={2013},
+month={Dec},
+pages={A37}
 }
 
 @article{Camargo2013,
@@ -235,6 +274,7 @@ month={Feb},
 pages={22}
 }
 
+
 @article{GomesJunior2015,
 title={Astrometric positions for 18 irregular satellites of giant planets from 23 years of observations},
 url={http://dx.doi.org/10.1051/0004-6361/201526273},
@@ -243,5 +283,6 @@ journal={Astronomy \& Astrophysics},
 publisher={EDP Sciences},
 author={A. R. Gomes-Júnior and M. Assafin and R. Vieira-Martins and J.-E. Arlot and J. I. B. Camargo and F. Braga-Ribas and D. N. da Silva Neto and A. H. Andrei and A. Dias-Oliveira and B. E. Morgado and et al.},
 year={2015},
-month={Jun}
+month={Jun},
+notes={accepted}
 }
